examples/security/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLables:
      network-role: db # Which pods will have the firewall rule
  policyTypes:
    - Ingress # Policy type could be ingress/Egress
    - Egress
  ingress: 
    - from:
      - podSelector:
          matchLables:
            name: api-pod # Which pods are allowed to access the selected Pods. (allowed source hosts)
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
      - podSelector:
          matchLabels:
            name: internal
      ports:
        - port: 3306
          protocol: TCP
